--- a/src/assets/scss/pages/create-rfq.component.scss
+++ b/src/assets/scss/pages/create-rfq.component.scss
@@ -35,6 +35,16 @@
   width: 40%;
 }
 
+.display-project-accordion{
+  .mat-expansion-panel-header{
+    padding: 0 10px;
+  }
+
+  .mat-expansion-indicator::after{
+    padding: 5px;
+  }
+}
+
 @media(max-width: 340px){
   .xs-scrn-btn{
     margin-right:5px;
