--- a/src/assets/scss/pages/indent.scss
+++ b/src/assets/scss/pages/indent.scss
@@ -65,3 +65,14 @@
     margin: auto;
   }
 }
+
+.no-indent{
+  font-size: 18px;
+  margin: 20px;
+}
+
+.indent-header-bg{
+  background-color: #2197bb;
+  color: #ffffff;
+  border-color: #2197bb;
+}
