--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -158,7 +158,7 @@
               <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
             </a>
 
-            <a class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
+            <a class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to PR">
               <img (click)="openIssueTOIndent(element)" [src]="indentButtonColor(element)" />
             </a>
 
