--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -83,7 +83,7 @@
       <ng-container *ngIf="allProjectsData?.length; else noDataAvailable">
         <div class="reportTablePo">
           <p class="fontsize-14-px p-b-0 p-t-10 mb-1">*All the values are in base currency ({{ currency }})</p>
-          <p class="fontsize-14-px pb-0">**All the values are inclusive of taxes.</p>
+          <!-- <p class="fontsize-14-px pb-0">**All the values are inclusive of taxes.</p> -->
           <table class="report-table">
             <tr matSort class="mat-elevation-z2 mat-header-row ctc-report-header-row">
               <th class="mat-header-cell">Materials</th>
