--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -111,7 +111,7 @@
       <ng-container *ngIf="supplierLiabiltyReportData">
         <div class="reportTablePo" *ngIf="supplierLiabiltyReportData.supplierReportDataList; else elseBlock">
           <p class="fontsize-14-px p-b-0 p-t-10 mb-1">*All the values are in base currency ({{ currency }})</p>
-          <p class="fontsize-14-px pb-0">**All the values are inclusive of taxes.</p>
+          <!-- <p class="fontsize-14-px pb-0">**All the values are inclusive of taxes.</p> -->
 
           <table class="report-table">
             <tr matSort class="mat-elevation-z2 mat-header-row">
