--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -46,7 +46,7 @@
     <div class="row">
 
       <ng-container *ngIf="!isMobile; else mobileSearch">
-        <div class="col-md-2">
+        <div class="col-md-2 align-top">
           <advance-search filterType="po"></advance-search>
         </div>
       </ng-container>
@@ -59,7 +59,7 @@
       </ng-template>
 
 
-      <div class="col-md-10 text-right">
+      <div class="col-md-10 text-right align-top">
         <!-- Topmost Status -->
         <!-- <mat-card class="m-t-40 m-b-20">
           <div class="row">
