--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -9,8 +9,7 @@
     <div class="row m-t-20">
       <div class="col-xs-8 col-sm-2 col-md-2 image-project-div">
         <div class="project-profile">
-          <img *ngIf="data.detail"
-            [src]="localImg || data.detail.imageUrl || '../../../../assets/images/project-default-image.png'" />
+          <img *ngIf="data.detail" [src]="localImg || data.detail.imageUrl || '../../../../assets/images/project-default-image.png'" />
           <img *ngIf="!data.detail" [src]="localImg || '../../../../assets/images/project-default-image.png'" />
         </div>
         <div class="upload-photo-btn browser-method p-t-10">
@@ -33,8 +32,7 @@
               <mat-label>Project Name*</mat-label>
               <input matInput type="text" formControlName="projectName" />
             </mat-form-field>
-            <small *ngIf="form.controls['projectName'].hasError('required') && form.controls['projectName'].touched"
-              class="form-error-msg">
+            <small *ngIf="form.controls['projectName'].hasError('required') && form.controls['projectName'].touched" class="form-error-msg">
               Project name is required
             </small>
           </div>
@@ -47,13 +45,10 @@
             <mat-form-field class="border-input">
               <mat-label>Address 1*</mat-label>
               <input matInput type="text" formControlName="addressLine1" />
-              <small *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
-                class="form-error-msg">
+              <small *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched" class="form-error-msg">
                 Address is required
               </small>
-              <small
-                *ngIf="form.controls['addressLine1'].hasError('maxlength') && form.controls['addressLine1'].touched"
-                class="form-error-msg">
+              <small *ngIf="form.controls['addressLine1'].hasError('maxlength') && form.controls['addressLine1'].touched" class="form-error-msg">
                 Address should be less than 120 characters
               </small>
             </mat-form-field>
@@ -63,9 +58,7 @@
             <mat-form-field class="border-input">
               <mat-label>Address 2</mat-label>
               <input matInput type="text" formControlName="addressLine2" />
-              <small
-                *ngIf="form.controls['addressLine2'].hasError('maxlength') && form.controls['addressLine2'].touched"
-                class="form-error-msg">
+              <small *ngIf="form.controls['addressLine2'].hasError('maxlength') && form.controls['addressLine2'].touched" class="form-error-msg">
                 Address should be less than 120 characters
               </small>
             </mat-form-field>
@@ -79,27 +72,30 @@
             <mat-form-field class="border-select mat-form-field-flex-mm-padding mt6p">
               <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                 <div class="display-flex">
-                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
-                    [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
-                    (keydown)="$event.stopPropagation()" />
+                  <input
+                    class="p-l-10 p-b-5"
+                    matInput
+                    type="search"
+                    placeholder="Search Country"
+                    [(ngModel)]="searchCountry"
+                    [ngModelOptions]="{standalone: true}"
+                    (keydown)="$event.stopPropagation()"
+                  />
                   <button mat-button matSuffix mat-icon-button>
                     <mat-icon>search</mat-icon>
                   </button>
                 </div>
                 <mat-select-trigger>
-                  <span
-                    matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
-                      class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                  <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
+                    ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                     <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
                     <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
                   </span>
                 </mat-select-trigger>
-                <mat-option
-                  *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
-                  [value]="country" selected="trade.isAttatched"><span><img class="width17Percent p-r-10"
-                      [src]="country.imageUrl" alt="" />
-                    <span matTooltip="{{ country.name }}"
-                      class="limited-character universal p-r-5">{{ country.name }}</span>
+                <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
+                  ><span
+                    ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                    <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
                     <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                   </span>
                 </mat-option>
@@ -112,8 +108,7 @@
               <mat-label>Pincode*</mat-label>
               <input matInput type="text" (input)="getPincode($event)" formControlName="pinCode" />
               <!-- <mat-error>PinCode is Required</mat-error> -->
-              <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
-                class="error-msg"> Pincode is required </small>
+              <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched" class="error-msg"> Pincode is required </small>
               <!-- <small *ngIf="form.controls['pinCode'].hasError('pattern') && form.controls['pinCode'].touched" class="error-msg"> Enter Valid Pincode</small> -->
               <small *ngIf="form.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg">
                 Enter Valid Pincode
@@ -159,13 +154,11 @@
             <mat-form-field class="border-input">
               <mat-label>Project Start Date*</mat-label>
               <!-- <span class="form-placeholder">{{form["controls"]["startDate"].value | date: "dd-MMM-yyy" }}</span> -->
-              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref
-                (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
+              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
 
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate startView="month" [startAt]="startDate"></mat-datepicker>
-              <small *ngIf="form.controls['startDate'].hasError('required') && form.controls['startDate'].touched"
-                class="form-error-msg">
+              <small *ngIf="form.controls['startDate'].hasError('required') && form.controls['startDate'].touched" class="form-error-msg">
                 Start date is required
               </small>
             </mat-form-field>
@@ -175,18 +168,23 @@
             <mat-form-field class="border-input">
               <mat-label>Project End Date*</mat-label>
               <!-- <span class="form-placeholder" >{{ form["controls"]["endDate"].value | date: "dd-MMM-yyy" }}</span> -->
-              <input matInput [matDatepicker]="endDate" formControlName="endDate" #refEnd
-                (dateChange)="getEndDate(refEnd.value)" [min]="form['controls']['startDate'].value"
-                (click)="endDate.open()" readonly />
+              <input
+                matInput
+                [matDatepicker]="endDate"
+                formControlName="endDate"
+                #refEnd
+                (dateChange)="getEndDate(refEnd.value)"
+                [min]="projectEndDate"
+                (click)="endDate.open()"
+                readonly
+              />
               <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
               <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
-              <small *ngIf="form.controls['endDate'].hasError('required') && form.controls['endDate'].touched"
-                class="form-error-msg">
+              <small *ngIf="form.controls['endDate'].hasError('required') && form.controls['endDate'].touched" class="form-error-msg">
                 End date is required
               </small>
             </mat-form-field>
-            <small *ngIf="sameStartEndDate" class="error-msg sameStartEndDate"> End Date must be greater than Start Date
-            </small>
+            <small *ngIf="sameStartEndDate" class="error-msg sameStartEndDate"> End Date must be greater than Start Date </small>
           </div>
         </div>
 
@@ -202,8 +200,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <small *ngIf="form.controls['type'].hasError('required') && form.controls['type'].touched"
-              class="form-error-msg">
+            <small *ngIf="form.controls['type'].hasError('required') && form.controls['type'].touched" class="form-error-msg">
               Project type is required
             </small>
           </div>
@@ -214,8 +211,7 @@
               <mat-label>Area</mat-label>
               <!-- <mat-error>ProjectArea is Required</mat-error> -->
               <input matInput type="text" formControlName="area" min="0" appTwoDigitDecimaNumber required />
-              <small *ngIf="form.controls['area'].hasError('required') && form.controls['area'].touched"
-                class="error-msg"> Area is required </small>
+              <small *ngIf="form.controls['area'].hasError('required') && form.controls['area'].touched" class="error-msg"> Area is required </small>
               <!-- <small *ngIf="form.controls['area'].hasError('pattern') && form.controls['area'].touched"
                 class="error-msg"> Enter valid area </small> -->
             </mat-form-field>
@@ -231,8 +227,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <small *ngIf="form.controls['unit'].hasError('required') && form.controls['unit'].touched"
-              class="error-msg">Area unit is required </small>
+            <small *ngIf="form.controls['unit'].hasError('required') && form.controls['unit'].touched" class="error-msg">Area unit is required </small>
           </div>
         </div>
         <!-- sixth row -->
@@ -242,10 +237,8 @@
             <mat-form-field class="border-input" matTooltip="Construction Cost {{ currencyCode }}">
               <mat-label>Construction Cost {{currencyCode}}</mat-label>
               <input matInput type="text" appTwoDigitDecimaNumber formControlName="cost" min="0" required />
-              <small *ngIf="form.controls['cost'].hasError('required') && form.controls['cost'].touched"
-                class="error-msg"> Construction cost is required </small>
-              <small *ngIf="form.controls['cost'].hasError('pattern') && form.controls['cost'].touched"
-                class="error-msg"> Enter valid construction cost </small>
+              <small *ngIf="form.controls['cost'].hasError('required') && form.controls['cost'].touched" class="error-msg"> Construction cost is required </small>
+              <small *ngIf="form.controls['cost'].hasError('pattern') && form.controls['cost'].touched" class="error-msg"> Enter valid construction cost </small>
             </mat-form-field>
           </div>
 
@@ -263,8 +256,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <small *ngIf="form.controls['costUnit'].hasError('required') && form.controls['costUnit'].touched"
-              class="error-msg">Cost unit is required </small>
+            <small *ngIf="form.controls['costUnit'].hasError('required') && form.controls['costUnit'].touched" class="error-msg">Cost unit is required </small>
           </div>
 
           <div class="col-sm-6">
@@ -274,8 +266,7 @@
               <input matInput type="text" formControlName="gstNo" />
               <!-- <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
                 class="form-error-msg"> Gst No is required </small> -->
-              <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
-                class="form-error-msg"> Enter Valid Gst No</small>
+              <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched" class="form-error-msg"> Enter Valid Gst No</small>
               <!-- <mat-error>Address is Required</mat-error> -->
             </mat-form-field>
           </div>
@@ -285,10 +276,9 @@
     </div>
   </div>
   <div mat-dialog-actions>
+    {{validPincode}}
     <div class="col-sm-12 col-md-12 add-edit-dialog-button" [ngClass]="isMobile ? 'sm-btn1' : '' ">
-      <button mat-raised-button
-        [disabled]="(!imageFileSize && localImg) ? true : (!form.valid || (!validPincode) || sameStartEndDate)"
-        class="main-background-color main-button color-white">
+      <button mat-raised-button [disabled]="(!imageFileSize && localImg) ? true : (!form.valid || (!validPincode) )" class="main-background-color main-button color-white">
         <span *ngIf="!data.isEdit">Add</span>
         <span *ngIf="data.isEdit">Save</span>
       </button>
