--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -1,58 +1,71 @@
 <form [formGroup]="signinForm" (ngSubmit)="signin()" class="sign-in-form">
   <div style="min-height: 221px;" class="w-100">
     <div class="row">
-      <div *ngIf="callingCode === '+91'" class="col-xs-4">
-        <mat-form-field class="border-select mat-form-field-flex-mm-padding select-country-code">
-          <mat-select formControlName="countryCode">
-            <div class="display-flex">
-              <input
-                class="p-l-10 p-b-5"
-                matInput
-                type="search"
-                placeholder="Search Country"
-                [(ngModel)]="searchCountry"
-                [ngModelOptions]="{standalone: true}"
-                (keydown)="$event.stopPropagation()"
-              />
-              <button mat-button matSuffix mat-icon-button>
-                <mat-icon>search</mat-icon>
-              </button>
-            </div>
-            <mat-select-trigger>
-              <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
-                <img class="width35Percent p-r-4 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
-                <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
-              </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
-              ><span
-                ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
-                <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
-              </span>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+
+
+      <div class="col-xs-12">
+        <div class="row">
+
+          <div *ngIf="callingCode === '+91'" class="col-xs-4">
+            <mat-form-field class="border-select mat-form-field-flex-mm-padding select-country-code si-gn">
+              <mat-select formControlName="countryCode">
+                <div class="display-flex">
+                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
+                    [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
+                    (keydown)="$event.stopPropagation()" />
+                  <button mat-button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                  </button>
+                </div>
+                <mat-select-trigger>
+                  <span
+                    matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
+                    <img class="w-30 p-r-4 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                    <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                    <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                  </span>
+                </mat-select-trigger>
+                <mat-option
+                  *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
+                  [value]="country" selected="trade.isAttatched"><span><img class="width17Percent p-r-10"
+                      [src]="country.imageUrl" alt="" />
+                    <span matTooltip="{{ country.name }}"
+                      class="limited-character universal p-r-5">{{ country.name }}</span>
+                    <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                  </span>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div *ngIf="callingCode === '+91'" class="col-xs-8">
+            <mat-form-field class="border-input">
+              <input matInput formControlName="phone" type="number" min="0"
+                onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
+              <small *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched"
+                class="signinForm-error-msg"> Phone No is required </small>
+              <small *ngIf="signinForm.controls['phone'].hasError('pattern') && signinForm.controls['phone'].touched"
+                class="signinForm-error-msg"> Enter Valid Phone No</small>
+            </mat-form-field>
+          </div>
+
+        </div>
       </div>
-      <div *ngIf="callingCode === '+91'" class="col-xs-8 p-t-1">
-        <mat-form-field class="border-input">
-          <input matInput formControlName="phone" type="number" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
-          <small *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched" class="signinForm-error-msg"> Phone No is required </small>
-          <small *ngIf="signinForm.controls['phone'].hasError('pattern') && signinForm.controls['phone'].touched" class="signinForm-error-msg"> Enter Valid Phone No</small>
-        </mat-form-field>
-      </div>
+
+
       <div *ngIf="callingCode !== '+91'" class="col-xs-12">
         <mat-form-field class="border-input">
           <input matInput type="email" formControlName="email" placeholder="Email" />
-          <small *ngIf="signinForm.controls['email'].hasError('required') && signinForm.controls['email'].touched" class="signupForm-error-msg"> Email is required </small>
-          <small *ngIf="signinForm.controls['email'].hasError('pattern') && signinForm.controls['email'].touched" class="signupForm-error-msg"> Enter Valid Email</small>
+          <small *ngIf="signinForm.controls['email'].hasError('required') && signinForm.controls['email'].touched"
+            class="signupForm-error-msg"> Email is required </small>
+          <small *ngIf="signinForm.controls['email'].hasError('pattern') && signinForm.controls['email'].touched"
+            class="signupForm-error-msg"> Enter Valid Email</small>
         </mat-form-field>
       </div>
     </div>
     <div class="row">
       <mat-form-field class="col-xs-12 border-input">
-        <input matInput [type]="showPassWordString ? 'text' : 'password'" formControlName="password" placeholder="Password" />
+        <input matInput [type]="showPassWordString ? 'text' : 'password'" formControlName="password"
+          placeholder="Password" />
         <a>
           <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
         </a>
@@ -63,7 +76,8 @@
     </div>
 
     <div mat-dialog-actions class="col-xs-12 p-t-10">
-      <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial style="width: 100%;" [disabled]="!signinForm.valid">
+      <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
+        style="width: 100%;" [disabled]="!signinForm.valid">
         Sign In
       </button>
     </div>
