--- a/src/app/features/grn/grn.component.html
+++ b/src/app/features/grn/grn.component.html
@@ -43,8 +43,8 @@
                   <thead class="mat-header-cell material">Awarded <br />Quantity</thead>
                   <thead class="mat-header-cell material">Delivered <br />Quantity</thead>
                   <!-- <thead class="mat-header-cell material">Pending <br />Quantity</thead> -->
-                  <thead class="mat-header-cell material text-center">Unit Price <br />(INR)</thead>
-                  <thead class="mat-header-cell material text-center">Total Amount <br />(INR)</thead>
+                  <thead class="mat-header-cell material text-center">Unit Price <br />({{ project.baseCurremcy }})</thead>
+                  <thead class="mat-header-cell material text-center">Total Amount <br />({{ project.baseCurremcy }})</thead>
                   <thead class="mat-header-cell material">Supplier</thead>
                 </tr>
 
