--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="permissionObj.rfqFlag">
           <p>
             You haven't added any project yet. <br />
-            Please create one to continue.
+            Please add one to continue.
           </p>
         </div>
         <div *ngIf="!permissionObj.rfqFlag">
