--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -6,7 +6,7 @@
         <div>
           <p>
             There is no custom material added in the project. <br />
-            Please add material either from bellow or BOM.
+            Please add material either from below or BOM.
           </p>
         </div>
         <div>
