--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -38,7 +38,7 @@
         <div class="mx-auto text-center pt-4">
           <img src="assets/images/project-background.png" alt="No projects available" class="img-fluid" />
           <h5 class="mt-4">You haven't added any project yet.</h5>
-          <h5 class="mb-3">Please create one to continue.</h5>
+          <h5 class="mb-3">Please add one to continue.</h5>
           <button (click)="addProject()" mat-raised-button class="main-background-color main-button color-white">Add First Project</button>
         </div>
       </div>
