--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -6,7 +6,7 @@
         <div>
           <p>
             You haven't added any supplier yet. <br />
-            Please create one to continue.
+            Please add one to continue.
           </p>
         </div>
         <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">
