--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -7,7 +7,7 @@
 <br />
 
 <div class="text-center p-b-10 color-grey font-size14" *ngIf="exchangeValue>0">
-  You are floating the RFP in <span>{{exchangeCurrency}}</span> with conversion rate of <span>{{exchangeValue}} </span><span>{{primaryCurrency}}</span>.Also Supplier will have to
+  You are floating the RFP in <span>{{exchangeCurrency}}</span> with conversion rate of <span>{{exchangeValue}} </span><span>{{primaryCurrency}}</span>.Suppliers will have to
   submit the quote in this selected currency
 </div>
 <div class="text-center text-semi-bold color-grey">
