--- a/src/app/shared/dialogs/short-close-confirmation/short-close-confirmation.component.html
+++ b/src/app/shared/dialogs/short-close-confirmation/short-close-confirmation.component.html
@@ -6,10 +6,10 @@
 </div>
 <div mat-dialog-content class="padding-for-dialog-after-header">
   <p class="text-center light-grey">
-    You are closing the Purchase Order.Therefore pending quantity of materials will become 0 and will be free to add in other Purchase orders
+    You are closing this Purchase Order . The quantities of materials pending in this PO will become 0 and you are free to add them in other Purchase Orders.
     <br />
     <br />
-    <span class="text-semi-bold p-t-20 light-grey">Do you still want to short close the PO?</span>
+    <span class="text-semi-bold p-t-20 light-grey">Do you still want to shortclose the PO?</span>
   </p>
 </div>
 
@@ -21,7 +21,7 @@
   </div>
   <div class="col-sm-6 text-right save-btn-add-edit-user-modal">
     <button mat-raised-button (click)="delete()" class="main-background-color main-button color-white pull-right">
-      Confirm
+      Send for Approval
     </button>
   </div>
 </div>
