--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -124,7 +124,7 @@
                 </mat-autocomplete>
               </mat-form-field> -->
             </div>
-            <div class="col-xs-1 text-center p-t-15 p-l-5">
+            <div class="col-xs-1 text-center p-t-15" [ngClass]="this.firefox ? 'p-l-0' : 'p-l-5'">
               <div class="row">
                 <div class="col-xs-1 p-t-5">
                   <a href="javascript:void(0)" *ngIf="addMyMaterial.get('myMaterial').value.length > 1" class="width-15-px cursor-pointer" (click)="onDelete(i)">
