--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -36,8 +36,11 @@
           </a>
         </div>
         <div class="col-xs-4 col-md-6 text-right">
-          <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white">
+          <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white m-r-10">
             Create RFP
+          </button>
+          <button mat-raised-button (click)="createPo()" class="main-background-color main-button color-white">
+            Create PO
           </button>
         </div>
       </div>
