header added in ctc and liability page

--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -3,6 +3,11 @@
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Generate Report and amount  -->
       <div class="row align-items-center mt-2 ctc-upper-section">
+
+        <div class="col-md-12 mb-2">
+          <h4 class="report-header">Cost To Complete Report</h4>
+        </div>
+
         <!------ Select Project Field ------>
         <div class="col-md-3 col-xs-6 text-left showResponsiveReport">
           <mat-form-field class="border-select select-project-dropdown w-100">
